# 6502

./: .gitignore  7seg.asm  816-8k-rom.cfg  816-v2.cfg  8k-w-mon.cfg  README.md  TinyBasic.s  VPRE0-3.pld  bank0.pld  bios.asm  bios.inc  cf.inc  cftest.asm  decode16.pld  fat16.inc  forthtest.asm  gal-addr-decode.pld  hardware.inc  himem.pld  kbdtest.asm  mandel.asm  mandel.c  math.asm  mmap-notes.txt  nubios.asm  plcc44-adapter-pinout.txt  primes.asm  protoforth.asm  serialtest.asm  tbtest.cfg  test01.asm  test01.cfg  test02.asm  test02.pin  test02.pld  test03.asm  tvtest.asm  user-ram.cfg  v_forthtest.asm  vga.inc  (+3 more)
emu/: Cargo.toml  cpu.hpp  main.cpp
emu/src/: bus.rs  cpu.rs  main.rs  ppu.rs
kicad/816-v2/: 816-v2.kicad_pcb  816-v2.kicad_prl  816-v2.kicad_pro  816-v2.kicad_sch  New_Library.kicad_sym  io.kicad_sch  power-reset.kicad_sch  untitled.kicad_sch  vga.kicad_sch
pico/dbustest/: CMakeLists.txt  dbus.pio  montest.c  rgb.pio  vga_graphics.c  vga_graphics.h  vsync.pio
pico/vga-controller/: CMakeLists.txt  dbus.pio  hsync.pio  vga-controller.c  vga_graphics.c
tbtest/: il.c
